# traffloat

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Earthfile  README.md  cargo-toml.py  docker-compose.yml  fluid_convection_progress.txt  generate.sh  justfile  llm-disclosure.md  llm-usage.md  rust-toolchain  rustfmt.toml  typos.toml
base/: Cargo.toml  build.rs
base/proto/: index.proto  position.proto
base/src/: attribute.rs  debug.rs  lib.rs  partition.rs  proto.rs  save.rs  state.rs
base/src/save/: imperative.rs  load.rs  schema.rs  store.rs  tests.rs
build-boilerplate/: Cargo.toml
build-boilerplate/src/: lib.rs
client/: .gitignore  Cargo.toml  build.rs  dev.html  glsl_min.rb  package-lock.json  package.json  release.html  webpack.config.js
client/js/: bitmap.js  confirmUnload.js  debugDiv.js  error.js  reified.js
client/model/: Cargo.toml
client/model/src/: dec.rs  enc.rs  lib.rs
client/shaders/: object.frag  object.vert  star.vert  test.frag  test.vert  tf.frag  tf.vert
client/src/: camera.rs  config.rs  dock.rs  edge.rs  error.rs  initial.rs  input.rs  interface.rs  keymap.rs  lib.rs  main.rs  models.rs  net.rs  node.rs  options.rs  render.rs  scene.rs  session.rs  state.rs  style.rs  texture.rs  time.rs  util.rs  windowing.rs
client/src/app/: canvas.rs  chat.rs  connect.rs  game.rs  home.rs  icon.rs  lang.rs  menu.rs  mod.rs  mux.rs  route.rs  scenarios.rs
client/src/dock/: camera.rs  menu.rs  new_level.rs  open_mode.rs  save.rs  settings.rs  startup.rs  viewable_info.rs
client/src/input/: keyboard.rs  mod.rs  mouse.rs
client/src/mesh/: cube.rs  cylinder.rs  mod.rs  sphere.rs
client/src/render/: able.rs  camera.rs  canvas.rs  comm.rs  fps.rs  image.rs  key.rs  layers.rs  mod.rs  model.rs  perf.rs  texture.rs  util.rs
client/src/scene/: building.rs  conduit.rs  corridor.rs  facility.rs  picking.rs  resident.rs  singleplayer.rs
client/src/util/: shapes.rs  webgl.rs
client/static/: index.html  vanilla.tsvt
client/textures/: aggregate.py  combine.py  package-lock.json  package.json  requirements.txt
codegen/: Cargo.toml
codegen-raw/: Cargo.toml
codegen-raw/src/: definition.rs  lib.rs  system.rs
codegen-types/: Cargo.toml
codegen-types/src/: lib.rs
codegen/src/: gen.rs  lib.rs  system.rs
common/: Cargo.toml
common/src/: appearance.rs  cargo.rs  clock.rs  config.rs  defense.rs  edge.rs  factory.rs  gas.rs  graph.rs  heat.rs  lib.rs  liquid.rs  macros.rs  model.rs  node.rs  population.rs  reaction.rs  save.rs  shape.rs  space.rs  sun.rs  terminal.rs  texture.rs  time.rs  tmp.rs  types.rs  units.rs  util.rs  vehicle.rs
common/src/proto/: handshake.rs  io.rs  mod.rs  objects.rs
common/src/types/: config.rs  ids.rs  mod.rs  scalar.rs  space.rs  time.rs  units.rs
def/: Cargo.toml
def/src/: atlas.rs  building.rs  cargo.rs  catalyst.rs  crime.rs  edge.rs  gas.rs  lang.rs  lib.rs  liquid.rs  node.rs  skill.rs  style.rs  tests.rs  vehicle.rs
def/src/feature/: housing.rs  mod.rs  reaction.rs  security.rs
def/src/schema/: curdir.rs  mod.rs  stdext.rs  transform_matrix.rs  units.rs
def/src/state/: appearance.rs  edge.rs  mod.rs  node.rs
desktop/: Cargo.toml
desktop/src/: main.rs  main_menu.rs  options.rs  util.rs  view.rs
desktop/src/main_menu/: select_load.rs
desktop/src/util/: button.rs  glossary.rs  modal.rs  ui_style.rs
desktop/src/view/: background.rs  camera.rs  delegate.rs  diagnostics.rs  object.rs
docgen/: Cargo.toml
docgen/src/: assets.rs  building.rs  buildings.md  buildings.rs  cargo.md  cargo.rs  controls.md  corridor.md  crime.md  crime.rs  electricity.md  electricity.rs  gas.md  gas.rs  happiness.md  housing.md  index.md  liquid.md  liquid.rs  main.rs  manifest.rs  opts.rs  population.md  reaction.rs  reactions.rs  skill.rs  vehicle.md  vehicle.rs
fluid/: Cargo.toml  README.md  build.rs
fluid/src/: commands.rs  config.rs  config.save.proto  container.rs  container.save.proto  desc.rs  lib.rs  pipe.rs  pipe.save.proto  saves.proto  storage.rs  units.rs
fluid/src/config/: scalar.rs  types.rs
fluid/src/container/: element.rs  metrics.rs  tests.rs
fluid/src/pipe/: element.rs  force.rs  resistance.rs  tests.rs
fluid/viewer/: Cargo.toml
fluid/viewer/src/: main.rs
graph/: Cargo.toml  README.md  build.rs
graph/src/: building.rs  building.save.proto  corridor.rs  corridor.save.proto  duct.rs  edge.rs  lib.rs  node.rs  saves.proto
graph/src/building/: facility.rs  facility.save.proto
graph/src/corridor/: duct.rs  duct.save.proto  endpoint.rs
macro-util/: Cargo.toml
macro-util/src/: fan_out.rs  lib.rs  triangle.rs
macro-util/tests/: fan_out.rs
physics/: Cargo.toml
physics/benches/: fluid.rs
physics/src/: cleanup.rs  fluid.rs  generate.rs  graph.rs  lib.rs  persist.rs  reactor.rs  request.rs  resident.rs  util.rs  view.rs
physics/src/docs/: entities.rs
proto/: Cargo.toml
proto/src/: lib.rs  proto.rs
save/: Cargo.toml
server/: Cargo.toml  docker-compose.yml
server/src/: cli.rs  main.rs  session.rs  util.rs
spec/: Cargo.toml
spec/src/: attribute.rs  building.rs  cargo.rs  condition.rs  edge.rs  expr.rs  field.rs  fluid.rs  i18n.rs  lib.rs  node.rs  population.rs  reaction.rs  skill.rs  unit.rs
tfsave-builder/: Cargo.toml
tfsave-builder/src/: atlas.rs  init.rs  lang.rs  main.rs  schema.rs
tools/: Cargo.toml
tools/save-schema/: Cargo.toml
tools/src/: main.rs
tsvtool/: Cargo.toml
tsvtool/src/: main.rs
types/: Cargo.toml
types/src/: geometry.rs  lib.rs  ratio_def.rs  space.rs  time.rs  units.rs
types/src/def/: gas.rs  (+9 more)
vanilla/: Cargo.toml
vanilla/src/: building.rs  buildings.rs  cargo.rs  crime.rs  default.rs  gas.rs  lib.rs  liquid.rs  reaction.rs  reactions.rs  skill.rs  vehicle.rs
version/: Cargo.toml  build.rs
version/src/: lib.rs
view/: Cargo.toml
view/src/: appearance.rs  building.rs  lib.rs  metrics.rs  sid.rs  text.rs  viewable.rs  viewer.rs
web/: .gitignore  Cargo.toml  dev.html  package-lock.json  package.json
web/js/: error.js  load.js
web/src/: lib.rs  util.rs
web/static/: index.html
(+256 files in other folders)
