[workspace]
members = [
    "graph",
    "fluid",
    "version",
    "base",
    "desktop",
    "view",
]
resolver = "2"

[workspace.dependencies.bevy]
version = "0.14"
default-features = false
features = [
    "dynamic_linking",
]

[workspace.dependencies.traffloat-graph]
path = "graph"

[workspace.dependencies.traffloat-fluid]
path = "fluid"

[workspace.dependencies.traffloat-version]
path = "version"

[workspace.dependencies.traffloat-base]
path = "base"

[workspace.dependencies.traffloat-desktop]
path = "desktop"

[workspace.dependencies.traffloat-view]
path = "view"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
needless_pass_by_value = "allow"

[workspace.lints.clippy.pedantic]
level = "warn"
priority = -1

[workspace.package]
authors = [
    "SOFe <sofe2038@gmail.com>",
]
version = "0.0.3"
edition = "2021"
repository = "https://github.com/traffloat/traffloat"
homepage = "https://github.com/traffloat/traffloat"
license = "AGPL-3.0"
rust-version = "1.79"

[profile.dev]
opt-level = 3

[profile.dev.package.traffloat-graph]
opt-level = 0

[profile.dev.package.traffloat-fluid]
opt-level = 0

[profile.dev.package.traffloat-version]
opt-level = 0

[profile.dev.package.traffloat-base]
opt-level = 0

[profile.dev.package.traffloat-desktop]
opt-level = 0

[profile.dev.package.traffloat-view]
opt-level = 0

[profile.release]
lto = true
opt-level = 3
