[package]
name = "traffloat-base"
description = "Traffloat base components"
homepage = {workspace = true}
license = {workspace = true}
edition = {workspace = true}
repository = {workspace = true}
authors = {workspace = true}
version = {workspace = true}
rust-version = {workspace = true}

[dependencies]
bevy = {workspace = true}
itertools = "0.13.0"
prost = {workspace = true}
prost-types = "0.13.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"
