[package]
name = "traffloat-base"
description = "Traffloat base components"
homepage = {workspace = true}
license = {workspace = true}
edition = {workspace = true}
repository = {workspace = true}
authors = {workspace = true}
version = {workspace = true}
rust-version = {workspace = true}

[dependencies]
anyhow = "1.0.86"
bevy = {workspace = true}
either = "1.13.0"
itertools = "0.13.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.63"
