[package]
name = "traffloat-base"
description = "Traffloat base components"
homepage = {workspace = true}
license = {workspace = true}
edition = {workspace = true}
repository = {workspace = true}
authors = {workspace = true}
version = {workspace = true}
rust-version = {workspace = true}

[lints]
workspace = true

[dependencies]
anyhow = "1.0.86"
bevy = {workspace = true}
either = "1.13.0"
flate2 = "1.0.30"
itertools = "0.13.0"
rmp-serde = "1.3.0"
schemars = {workspace = true}
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.122", features = ["raw_value"] }
thiserror = "1.0.63"

[features]
schema = []
