[package]
name = "traffloat-client"
description = "traffloat frontend client"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bevy_mesh = { version = "0.18.1", default-features = false }
bevy_mod_config = { version = "0.6.1", features = ["egui"] }
clap = { version = "4.6.1", features = ["cargo", "derive", "env", "unstable-markdown"] }
dirs = "6.0.0"
egui = "0.33.1"
egui-notify = "0.21.0"
egui_dock = "0.18.0"
egui_material_icons = "0.5.0" # { version = "0.6.0", default-features = false, features = ["filled"] }
either = "1.16.0"
enum-map = "2.7.3"
itertools = "0.14.0"
jiff = { version = "0.2.29", features = ["js", "logging"] }
opentelemetry = { version = "0.32.0", optional = true }
opentelemetry-otlp = { version = "0.32.0", optional = true }
opentelemetry-stdout = { version = "0.32.0", optional = true }
opentelemetry_sdk = { version = "0.32.1", optional = true }
ordered-float = "5.3.0"
parking_lot = "0.12.5"
strum = { version = "0.28.0", features = ["derive"] }
tracing = "0.1.44"
tracing-opentelemetry = { version = "0.33.0", optional = true }
zstd = { version = "0.13.3", features = ["wasm"] }

traffloat-macro-util = { workspace = true }
traffloat-physics = { workspace = true }
traffloat-proto = { workspace = true }

[dependencies.bevy-inspector-egui]
version = "0.36.0"
default-features = false
optional = true
features = ["documentation", "egui_clipboard", "bevy_render"]

[dependencies.bevy]
workspace = true
features = ["2d"]

[dependencies.bevy_egui]
version = "0.39.1"
default-features = false
features = ["default_fonts", "manage_clipboard", "open_url", "render", "serde"]

[features]
dev = [
    "bevy/dynamic_linking",
    "bevy/trace",
    "bevy/track_location",
    "dep:bevy-inspector-egui",
    "bevy_mesh/bevy_mikktspace",
]
otel = ["dep:tracing-opentelemetry", "dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:opentelemetry-stdout"]
