[package]
name = "traffloat-codegen"
authors = ["SOFe <sofe2038@gmail.com>"]
version = "0.2.0"
edition = "2018"
repository = "https://github.com/SOF3/traffloat"
homepage = "https://github.com/SOF3/traffloat"
description = "Traffloat codegen library re-exports"
license = "AGPL-3.0"

[lib]
name = "codegen"

[dependencies]
lazy_static = "1.4.0"
legion = {version = "0.3.1", default-features = false, features = ["codegen"]}
log = "0.4.14"
shrev = "1.1.1"
traffloat-codegen-raw = {version = "0.2.0", path = "../codegen"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = {version = "0.3.47", features = ["Window", "Performance"], optional = true}
