[package]
name = "traffloat-codegen"
authors = ["SOFe <sofe2038@gmail.com>"]
version = "0.2.0"
edition = "2018"
repository = "https://github.com/traffloat/traffloat"
homepage = "https://github.com/traffloat/traffloat"
description = "Traffloat codegen library re-exports"
license = "AGPL-3.0"

[lib]
name = "codegen"

[dependencies]
enum-map = "1.1.0"
getset = "0.1.1"
lazy_static = "1.4.0"
log = "0.4.14"
shrev = "1.1.1"
traffloat-codegen-raw = {version = "0.2.0", path = "../codegen-raw"}

[dependencies.legion]
version = "0.4.0"
git = "https://github.com/traffloat/legion"
default-features = false
features = [
	"codegen",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = {version = "0.3.54", features = ["Window", "Performance"], optional = true}

[features]
render-debug = ["traffloat-codegen-raw/render-debug"]
