[package]
name = "traffloat-codegen"
authors = ["SOFe <sofe2038@gmail.com>"]
version = "0.2.0"
edition = "2021"
repository = "https://github.com/traffloat/traffloat"
homepage = "https://github.com/traffloat/traffloat"
description = "Traffloat codegen library re-exports"
license = "AGPL-3.0"

[lib]
name = "codegen"

[dependencies]
anyhow = "1.0.44"
arcstr = "1.1.1"
enum-map = "1.1.0"
getset = "0.1.1"
lazy_static = "1.4.0"
log = "0.4.14"
nalgebra = "0.29.0"
serde = {version = "1.0.130", features = ["derive"]}
shrev = "1.1.1"
smallvec = "1.7.0"
traffloat-codegen-raw = {version = "0.2.0", path = "../codegen-raw"}
typemap = "0.3.3"

[dependencies.legion]
version = "0.4.0"
git = "https://github.com/traffloat/legion"
default-features = false
features = [
	"codegen",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = {version = "0.3.55", features = ["Window", "Performance"], optional = true}

[features]
render-debug = ["traffloat-codegen-raw/render-debug"]
