[package]
name = "traffloat-common"
authors = ["SOFe <sofe2038@gmail.com>"]
version = "0.2.0"
edition = "2018"
repository = "https://github.com/traffloat/traffloat"
homepage = "https://github.com/traffloat/traffloat"
description = "Traffloat simulation library"
license = "AGPL-3.0"

[lib]
name = "traffloat"

[dependencies]
anyhow = "1.0.44"
arcstr = "1.1.1"
arrayvec = "0.7.1"
cfg-if = "1.0.0"
derive-new = "0.5.9"
flate2 = {version = "1.0.22", optional = true}
getset = "0.1.1"
log = "0.4.14"
nalgebra = "0.29.0"
rand = "0.8.4"
rmp-serde = {version = "0.15.5", optional = true}
serde = {version = "1.0.130", features = ["derive"]}
serde_yaml = {version = "0.8.21", optional = true}
shrev = "1.1.1"
smallvec = "1.7.0"
traffloat-codegen = {version = "0.2.0", path = "../codegen"}
traffloat-safety = {version = "0.2.0", path = "../safety"}
traffloat-types = {version = "0.2.0", path = "../types"}
typed-builder = "0.9.1"
yew = {version = "0.18.0", optional = true, default-features = false}

[dependencies.legion]
version = "0.4.0"
git = "https://github.com/traffloat/legion"
default-features = false
features = [
	"codegen",
	"extended-tuple-impls",
]

[features]
default = ["save-binary"]
save-binary = ["rmp-serde", "flate2"]
save-text = ["serde_yaml"]
render-debug = ["traffloat-codegen/render-debug"]
