[package]
name = "traffloat-def"
authors = ["SOFe <sofe2038@gmail.com>"]
version = "0.2.0"
edition = "2021"
repository = "https://github.com/traffloat/traffloat"
homepage = "https://github.com/traffloat/traffloat"
description = "Traffloat gamerule definitions"
license = "AGPL-3.0"

[dependencies]
anyhow = "1.0.50"
arcstr = {version = "1.1.1", features = ["serde"]}
derive-new = "0.5.9"
flate2 = "1.0.22"
fluent = {version = "0.16.0", optional = true}
getset = "0.1.1"
lazy_static = "1.4.0"
log = "0.4.14"
nalgebra = {version = "0.29.0", features = ["serde-serialize"]}
rmp-serde = "0.15.5"
serde = {version = "1.0.130", features = ["derive"]}
serde_str = "0.1.0"
smallvec = {version = "1.7.0", features = ["serde"]}
traffloat-codegen = {version = "0.2.0", path = "../codegen"}
xias = "0.2.1"
traffloat-types = {version = "0.2.0", path = "../types"}
typed-builder = "0.9.1"
unic-langid = "0.9.0"
xylem = {version = "0.2.7", features = ["serde"]}
yew = {version = "0.18.0", default-features = false, optional = true}

[features]
default = ["xy"]
xy = ["fluent"]
