[package]
name = "traffloat-desktop"
description = "Traffloat desktop client"
homepage = {workspace = true}
license = {workspace = true}
edition = {workspace = true}
repository = {workspace = true}
authors = {workspace = true}
version = {workspace = true}
rust-version = {workspace = true}

[lints]
workspace = true

[dependencies]
traffloat-graph = {workspace = true}
traffloat-base = {workspace = true}
traffloat-view = {workspace = true}
traffloat-version = {workspace = true}
derive_more = "0.99.17"
typed-builder = "0.19.1"
smallvec = "1.13.2"
rfd = "0.14.1"

[dependencies.bevy]
workspace = true
features = [
	"bevy_color",
	"bevy_core_pipeline",
	"bevy_state",
	"bevy_winit",
	"bevy_render",
	"bevy_text",
	"bevy_ui",
	"multi_threaded",
	"default_font",
	"x11",
]
