[package]
name = "traffloat-desktop"
description = "Traffloat desktop client"
homepage = {workspace = true}
license = {workspace = true}
edition = {workspace = true}
repository = {workspace = true}
authors = {workspace = true}
version = {workspace = true}
rust-version = {workspace = true}

[lints]
workspace = true

[dependencies]
traffloat-base = {workspace = true}
traffloat-fluid = {workspace = true}
traffloat-graph = {workspace = true}
traffloat-version = {workspace = true}
traffloat-view = {workspace = true}
derive_more = "0.99.17"
typed-builder = "0.19.1"
smallvec = "1.13.2"
rfd = "0.14.1"
clap = { version = "4.5.13", features = ["derive"] }
hex = "0.4.3"
rand_xoshiro = "0.6.0"
rand = "0.8.5"
rand_distr = "0.4.3"
bytemuck = "1.17.0"
bevy_eventlistener = "0.8.1"
bevy_mod_outline = "0.8.3"

[dependencies.bevy]
workspace = true
features = [
	"bevy_color",
	"bevy_core_pipeline",
	"bevy_gltf",
	"bevy_pbr",
	"bevy_state",
	"bevy_render",
	"bevy_text",
	"bevy_ui",
	"bevy_winit",
	"default_font",
	"multi_threaded",
	"tonemapping_luts",
	"x11",
]

[dependencies.bevy_mod_picking]
version = "0.20.1"
default-features = false
features = [
	"backend_bevy_ui",
	"backend_raycast",
	"selection",
]

[features]
default = ["dev"]
dev = ["traffloat-base/dev"]
