[package]
name = "traffloat-desktop"
description = "Traffloat desktop client"
homepage = {workspace = true}
license = {workspace = true}
edition = {workspace = true}
repository = {workspace = true}
authors = {workspace = true}
version = {workspace = true}
rust-version = {workspace = true}

[lints]
workspace = true

[dependencies]
traffloat-base = {workspace = true}
traffloat-fluid = {workspace = true}
traffloat-graph = {workspace = true}
traffloat-version = {workspace = true}
traffloat-view = {workspace = true}
bevy_egui = "0.29.0"
bevy_eventlistener = "0.8.1"
bevy_mod_outline = "0.8.3"
bytemuck = "1.17.0"
clap = { version = "4.5.13", features = ["derive"] }
derive_more = "0.99.17"
hex = "0.4.3"
parking_lot = "0.12.3"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xoshiro = "0.6.0"
rfd = "0.14.1"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.143"
smallvec = "1.13.2"
thiserror = "1.0.65"
typed-builder = "0.19.1"

[dependencies.bevy]
workspace = true
features = [
	"bevy_color",
	"bevy_core_pipeline",
	"bevy_gltf",
	"bevy_pbr",
	"bevy_state",
	"bevy_render",
	"bevy_text",
	"bevy_ui",
	"bevy_winit",
	"default_font",
	"multi_threaded",
	"tonemapping_luts",
	"x11",
]

[dependencies.bevy_mod_picking]
version = "0.20.1"
default-features = false
features = [
	"backend_bevy_ui",
	"backend_raycast",
	"selection",
]

[dependencies.bevy-inspector-egui]
version = "0.26.0"
optional = true

[features]
default = ["dev"]
dev = ["traffloat-base/dev"]
inspector = ["bevy-inspector-egui", "entity-names"]
entity-names = ["traffloat-base/entity-names", "traffloat-fluid/entity-names", "traffloat-graph/entity-names", "traffloat-view/entity-names"]
