[package]
name = "traffloat-fluid"
description = "Traffloat fluid physics"
homepage = {workspace = true}
license = {workspace = true}
edition = {workspace = true}
repository = {workspace = true}
authors = {workspace = true}
version = {workspace = true}
rust-version = {workspace = true}

[lints]
workspace = true

[dependencies]
bevy = {workspace = true}
traffloat-base = {workspace = true}
traffloat-graph = {workspace = true}
traffloat-view = {workspace = true}
derive_more = "0.99.17"
typed-builder = "0.19.1"
smallvec = "1.13.2"

[dev-dependencies]
approx = "0.5.1"
