[package]
name = "traffloat-graph"
description = "Traffloat structural graph management"
homepage = {workspace = true}
license = {workspace = true}
edition = {workspace = true}
repository = {workspace = true}
authors = {workspace = true}
version = {workspace = true}
rust-version = {workspace = true}

[dependencies]
bevy = {workspace = true}
prost = {workspace = true}
typed-builder = "0.18.2"

[build-dependencies]
anyhow = "1.0.86"
prost-build = {workspace = true}

[lints]
workspace = true
