[package]
name = "traffloat-graph"
description = "Traffloat structural graph management"
homepage = {workspace = true}
license = {workspace = true}
edition = {workspace = true}
repository = {workspace = true}
authors = {workspace = true}
version = {workspace = true}
rust-version = {workspace = true}

[dependencies]
bevy = {workspace = true}
prost = {workspace = true}
prost-types = {workspace = true}
typed-builder = "0.18.2"
traffloat-base = {workspace = true}

[build-dependencies]
traffloat-build-boilerplate = {workspace = true}

[lints]
workspace = true
