[package]
name = "traffloat-graph"
description = "Traffloat structural graph management"
homepage = {workspace = true}
license = {workspace = true}
edition = {workspace = true}
repository = {workspace = true}
authors = {workspace = true}
version = {workspace = true}
rust-version = {workspace = true}

[lints]
workspace = true

[dependencies]
anyhow = "1.0.86"
bevy = {workspace = true}
serde = { version = "1.0.204", features = ["derive"] }
traffloat-base = {workspace = true}
typed-builder = "0.18.2"
