[package]
name = "traffloat-physics"
description = "traffloat core server-side simulation"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true, features = ["serialize"] }
bevy_mod_config = "0.6.2"
derivative = "2.2.0"
derive_more = { version = "2.1.1", default-features = false, features = ["add", "add_assign"] }
enum-map = "2.7.3"
enum_dispatch = "0.3.13"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
tracing = "0.1.44"

traffloat-proto = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports", "csv_output"] }

[[bench]]
name = "fluid"
harness = false
