[package]
name = "traffloat-save"
authors = ["SOFe <sofe2038@gmail.com>"]
version = "0.0.3"
edition = "2021"
repository = "https://github.com/traffloat/traffloat"
homepage = "https://github.com/traffloat/traffloat"
description = "Traffloat scenario serialization base library"
license = "AGPL-3.0"

[dependencies]
dynec = "0.2.0-alpha.2"
