[package]
name = "traffloat-server"
authors = ["SOFe <sofe2038@gmail.com>"]
version = "0.2.0"
edition = "2018"
repository = "https://github.com/SOF3/traffloat"
homepage = "https://github.com/SOF3/traffloat"
description = "Traffloat frontend server"
license = "AGPL-3.0"

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.42"
futures = "0.3.9"
getset = "0.1.1"
log = "0.4.13"
pretty_env_logger = "0.4.0"
specs = {version = "0.16.1", default-features = false, features = ["parallel"]}
structopt = "0.3.21"
tokio-tungstenite = {version = "0.13.0", default-features = false, features = []}
traffloat-common = {version = "0.2.0", path = "../common"}
tungstenite = {version = "0.12.0", default-features = false, features = []}

[dependencies.tokio]
version = "1.0.1"
default-features = false
features = [
	"macros",
	"net",
	"rt",
	"rt-multi-thread",
	"signal",
	"sync",
	"time",
]
