[package]
name = "tfsave-builder"
authors = ["SOFe <sofe2038@gmail.com>"]
version = "0.2.0"
edition = "2018"
repository = "https://github.com/traffloat/traffloat"
homepage = "https://github.com/traffloat/traffloat"
description = "Creates save files from TOML files"
license = "AGPL-3.0"

[dependencies]
anyhow = "1.0.44"
arcstr = "1.1.1"
log = "0.4.14"
pretty_env_logger = "0.4.0"
resvg = "0.19.0"
serde = {version = "1.0.130", features = ["derive"]}
serde_path_to_error = "0.1.5"
structopt = "0.3.23"
tiny-skia = "0.6.1"
toml = "0.5.8"
traffloat-codegen = {version = "0.2.0", path = "../codegen"}
traffloat-def = {version = "0.2.0", path = "../def", features = ["convert-human-friendly"]}
traffloat-safety = {version = "0.2.0", path = "../safety"}
traffloat-types = {version = "0.2.0", path = "../types"}
usvg = "0.19.0"
