[package]
name = "traffloat-tfsave-builder"
authors = ["SOFe <sofe2038@gmail.com>"]
version = "0.2.0"
edition = "2021"
repository = "https://github.com/traffloat/traffloat"
homepage = "https://github.com/traffloat/traffloat"
description = "Creates save files from TOML files"
license = "AGPL-3.0"

[[bin]]
name = "tfsave-builder"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.51"
arcstr = "1.1.1"
fluent = "0.16.0"
fluent-syntax = "0.11.0"
itertools = "0.10.1"
log = "0.4.14"
nalgebra = "0.29.0"
pretty_env_logger = "0.4.0"
resvg = "0.23.0"
rmp-serde = "0.15.5"
serde = {version = "1.0.130", features = ["derive"]}
serde_path_to_error = "0.1.5"
structopt = "0.3.23"
tiny-skia = "0.6.1"
toml = "0.5.8"
traffloat-codegen = {version = "0.2.0", path = "../codegen"}
traffloat-def = {version = "0.2.0", path = "../def", features = ["xy"]}
xias = "0.2.1"
traffloat-types = {version = "0.2.0", path = "../types"}
typed-builder = "0.9.1"
unic-langid = "0.9.0"
usvg = "0.19.0"
xylem = {version = "0.2.7", features = ["serde"]}
