[package]
name = "traffloat-types"
authors = ["SOFe <sofe2038@gmail.com>"]
version = "0.2.0"
edition = "2018"
repository = "https://github.com/traffloat/traffloat"
homepage = "https://github.com/traffloat/traffloat"
description = "Traffloat unit definitions"
license = "AGPL-3.0"

[dependencies]
arcstr = "1.1.0"
getset = "0.1.1"
nalgebra = "0.28.0"
smallvec = "1.6.1"
typed-builder = "0.9.0"
