[package]
name = "traffloat-types"
authors = ["SOFe <sofe2038@gmail.com>"]
version = "0.2.0"
edition = "2021"
repository = "https://github.com/traffloat/traffloat"
homepage = "https://github.com/traffloat/traffloat"
description = "Traffloat unit definitions"
license = "AGPL-3.0"

[dependencies]
derive-new = "0.5.9"
getset = "0.1.1"
nalgebra = {version = "0.29.0", features = ["serde-serialize"]}
serde = {version = "1.0.130", features = ["derive"]}
smallvec = { version = "1.7.0", features = ["serde"] }
