[package]
name = "traffloat-vanilla"
authors = ["SOFe <sofe2038@gmail.com>"]
version = "0.2.0"
edition = "2018"
repository = "https://github.com/traffloat/traffloat"
homepage = "https://github.com/traffloat/traffloat"
description = "Traffloat vanilla data definitions"
license = "AGPL-3.0"

[dependencies]
arcstr = "1.1.0"
derive-new = "0.5.9"
getset = "0.1.1"
lazy_static = "1.4.0"
smallvec = "1.6.1"
strum = {version = "0.21.0", features = ["derive"]}
traffloat-common = {version = "0.2.0", path = "../common"}
traffloat-types = {version = "0.2.0", path = "../types"}

[dependencies.legion]
version = "0.4.0"
default-features = false
git = "https://github.com/traffloat/legion"
branch = "push-entity-trait"
